added currently learning to skills, also added wcq to projects

--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,19 @@
                         <li>C, C++</li>
                         <li>OCaml</li>
                         <li>Postgresql</li>
-                        <li>Web Apps w/ Flask & Django</li>
+                        <li>Web Apps w/ Flask</li>
                         <li>Bash</li>
                         <li>Git</li>
                         <li>Linux Systems</li>
+                </ul>
+                </p>
+
+                <b>Currently learning:</b>
+
+                <p>
+                <ul>
+                        <li>Web Apps w/ Django</li>
+                        <li>R w/ Shiny</li>
                 </ul>
                 </p>
 
@@ -45,6 +54,28 @@
                 </p>
 
                 <table cellspacing="10" border="1" rules=none>
+                <tr>
+                        <td>
+                                <h2>WCQ</h2>
+                                <h5>Lead Developer</h5>
+                                <h5>October 2017 - Current</h5>
+                        </td>
+
+                        <td>
+                                <b>WCQ</b> builds statistical models from past
+                                FIFA World Cups (both qualifying and 
+                                final stages), as well as FIFA Youth World
+                                Championships, in order to predict numerous
+                                metrics in future competitions. A compiled
+                                research paper showcases the
+                                most significant predictions, and a web app
+                                using Shiny will eventually be created to
+                                allow users to create their own models
+                                interactively. Web scraping, formatting, and
+                                model generation done in R.
+                        </td>
+                </tr>
+
                 <tr>
                         <td>
                                 <h2>ImHere</h2>
