--- a/about.html
+++ b/about.html
@@ -20,28 +20,36 @@
                 <header><h1>About Me</h1></header>
 
                 <p>
-                My name is <b>Ricardo M. Martinez</b> and I am a 23-year old
-                aspiring software engineer from Miami, FL. In May 2017, I
+                My name is <b>Ricardo M. Martinez</b> and I am a 24-year old
+                software engineer from Miami, FL. In May 2017, I
                 graduated from Columbia University's Fu Foundation School of
                 Engineering and Applied Science with a B.S. in Computer Science.
-                By taking classes covering a broad range of subject material, I
-                discovered that I was most drawn to the "agile software
-                development" work flow, where I was working collaboratively with
-                others and developing a product with changing requirements.
+                The following year, I started working as a software developer at
+                Tradebyte Software GmbH, in a small town in Germany called Ansbach.
+                The change was dramatic - I was experiencing a new country and a
+                new culture, all while working at my first software development
+                job - but I quickly got into the swing of things, and before long,
+                I was efficiently working with my team on all stages of our applications'
+                development lifecycles. 
                 </p>
                 
                 <p>
-                One such project that I worked on is <b>ImHere</b>, which is an
-                online attendance manager designed for use in a classroom
-                setting. By combining different technologies
-                and developing for a specific customer's use cases, my team and
-                I were able to win JPMorgan Chase & Co.'s 2016 Self-Defined
-                Project Award. You can learn more about the project
-                in the 'Skills & Projects' section above.
+                Since I started working at Tradebyte, I've had the fortune of
+                working on a project that introduced me to a number of topics
+                that I wasn't previously familiar with. Technology-wise: containerization,
+                continuous integration and deployment, advanced knowledge of a web
+                framework (Django), and cloud computing (AWS); organizationally: agile
+                methodologies, kanban boards, JIRA, and Confluence, coordinating the
+                inter-process communication of two large software systems, and even working
+                in teams of more than 3 people. I've also been tasked with presenting
+                that same project to other developers, other departments within the company,
+                and then even to clients of the company, all of which have
+                helped me to explain technical implementations both at very detailed and
+                general levels.
                 </p>
 
                 <p>
-                One of my hobbies is exploring all things "Linux". When I'm not
+                My hobbies in tech include exploring all things "Linux". When I'm not
                 configuring various desktop environments or tiling window
                 managers, I'm always looking for new niche software that could
                 improve my computing experience. Recently, I've discovered
@@ -52,17 +60,19 @@
 
                 <p>
                 Outside of the tech world, I like watching sports (particularly
-                basketball and soccer), exercising by running around South
-                Florida, and growing my still-very-small garden. I also like
-                staying in touch with my grandparents and uncle who live in
-                Germany, forcing me to keep my German in tip-top shape!
+                football, basketball, and soccer), exercising by running around my city or (more recently)
+                bouldering, and growing my still-very-small garden. I also like
+                staying in touch with my grandparents and uncle who all live in
+                Hamburg, visiting them whenever I can find the time!
                 </p>
 
                 <footer>
                 <ul>
-                        <li><a href="mailto:rmm2222@columbia.edu">email</a></li>
+                        <li><a href="mailto:rmm783@gmail.com">email</a></li>
                         <li><a href="https://github.com/ricardomart">github.com/ricardomart</a></li>
+                        <!--
                         <li><a href="https://bitbucket.org/ricardomart">bitbucket.org/ricardomart</a></li>
+                        -->
                 </ul>
                 </footer>
 	</body>
