--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 </td>
 
                 <td>
-                Welcome to my website! I am an aspiring software engineer with
+                Welcome to my website! I am a software engineer with
                 interests in application and web development. Use the
                 links above to learn more about me, check out some projects that
                 I've worked on, or view my resume.
 
                 <p>
-                Please contact me via email at <b>rmm2222@columbia.edu</b>, or just
+                Please contact me via email at <b>rmm783@gmail.com</b>, or just
                 click the 'email' link below.
                 </p>
                 </td>
@@ -43,9 +43,11 @@
 
                 <footer>
                 <ul>
-                        <li><a href="mailto:rmm2222@columbia.edu">email</a></li>
+                        <li><a href="mailto:rmm783@gmail.com">email</a></li>
                         <li><a href="https://github.com/ricardomart">github.com/ricardomart</a></li>
+                        <!--
                         <li><a href="https://bitbucket.org/ricardomart">bitbucket.org/ricardomart</a></li>
+                        -->
                 </ul>
                 </footer>
 	</body>
