--- a/projects.html
+++ b/projects.html
@@ -26,15 +26,17 @@
 
                 <p>
                 <ul>
-                        <li>Python (2/3)</li>
+                        <li>Python 3</li>
+                        <li>Web Apps w/ Django</li>
+                        <li>PostgreSQL</li>
+                        <li>Docker</li>
                         <li>Java</li>
                         <li>C, C++</li>
                         <li>OCaml</li>
-                        <li>Postgresql</li>
-                        <li>Web Apps w/ Flask</li>
                         <li>Bash</li>
                         <li>Git</li>
-                        <li>Linux Systems</li>
+                        <li>Linux Systems & Tools</li>
+                        <li>Atlassian Suite (JIRA, Kanban, Confluence)</li>
                 </ul>
                 </p>
 
@@ -42,8 +44,9 @@
 
                 <p>
                 <ul>
-                        <li>Web Apps w/ Django</li>
+                        <li>Gitlab CI/CD</li>
                         <li>R w/ Shiny</li>
+                        <li>AWS</li>
                 </ul>
                 </p>
 
@@ -58,7 +61,7 @@
                         <td>
                                 <h2>WCQ</h2>
                                 <h5>Lead Developer</h5>
-                                <h5>October 2017 - Current</h5>
+                                <h5>October 2017 - August 2018</h5>
                         </td>
 
                         <td>
@@ -142,9 +145,11 @@
 
                 <footer>
                 <ul>
-                        <li><a href="mailto:rmm2222@columbia.edu">email</a></li>
+                        <li><a href="mailto:rmm783@gmail.com">email</a></li>
                         <li><a href="https://github.com/ricardomart">github.com/ricardomart</a></li>
+                        <!--
                         <li><a href="https://bitbucket.org/ricardomart">bitbucket.org/ricardomart</a></li>
+                        -->
                 </ul>
                 </footer>
 	</body>
