--- a/resume.html
+++ b/resume.html
@@ -19,14 +19,16 @@
 
                 <header><h1>Resume</h1></header>
 
-                <iframe src="Ricardo-Martinez-resume.pdf" height="600px" width="100%">
+                <iframe src="Resume_Ricardo_Martinez.pdf" height="600px" width="100%">
                 </iframe>
 
                 <footer>
                 <ul>
-                        <li><a href="mailto:rmm2222@columbia.edu">email</a></li>
+                        <li><a href="mailto:rmm783@gmail.com">email</a></li>
                         <li><a href="https://github.com/ricardomart">github.com/ricardomart</a></li>
+                        <!--
                         <li><a href="https://bitbucket.org/ricardomart">bitbucket.org/ricardomart</a></li>
+                        -->
                 </ul>
                 </footer>
 	</body>
