--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
                 <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
-                        <li><a href="projects.html">Skills & Projects</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="resume.html">Resume</a></li>
                 </ul>
                 </nav>
@@ -20,50 +21,34 @@
                 <header><h1>About Me</h1></header>
 
                 <p>
-                My name is <b>Ricardo M. Martinez</b> and I am a 24-year old
-                software engineer from Miami, FL. In May 2017, I
-                graduated from Columbia University's Fu Foundation School of
-                Engineering and Applied Science with a B.S. in Computer Science.
-                The following year, I started working as a software developer at
-                Tradebyte Software GmbH, in a small town in Germany called Ansbach.
-                The change was dramatic - I was experiencing a new country and a
-                new culture, all while working at my first software development
-                job - but I quickly got into the swing of things, and before long,
-                I was efficiently working with my team on all stages of our applications'
-                development lifecycles. 
-                </p>
-                
-                <p>
-                Since I started working at Tradebyte, I've had the fortune of
-                working on a project that introduced me to a number of topics
-                that I wasn't previously familiar with. Technology-wise: containerization,
-                continuous integration and deployment, advanced knowledge of a web
-                framework (Django), and cloud computing (AWS); organizationally: agile
-                methodologies, kanban boards, JIRA, and Confluence, coordinating the
-                inter-process communication of two large software systems, and even working
-                in teams of more than 3 people. I've also been tasked with presenting
-                that same project to other developers, other departments within the company,
-                and then even to clients of the company, all of which have
-                helped me to explain technical implementations both at very detailed and
-                general levels.
+                    My name is <b>Ricardo Moritz Martinez</b> and I am a 25-year old
+                    software engineer from Miami, FL. In May 2017, I
+                    graduated from Columbia University's Fu Foundation School of
+                    Engineering and Applied Science with a B.S. in Computer Science.
+                    The following year, I started working as a software engineer for
+                    Tradebyte Software GmbH in Ansbach, Germany. Over the next two years
+                    I would go on to learn a great deal, both professionally and personally,
+                    but at the end of June, 2020, in the midst of the COVID-19 pandemic,
+                    I returned to my family in the U.S.
                 </p>
 
                 <p>
-                My hobbies in tech include exploring all things "Linux". When I'm not
-                configuring various desktop environments or tiling window
-                managers, I'm always looking for new niche software that could
-                improve my computing experience. Recently, I've discovered
-                <a href="https://github.com/michael-lazar/rtv">rtv</a>, 
-                <a href="https://dev.yorhel.nl/ncdu">ncdu</a>, and 
-                <a href="https://www.passwordstore.org/">pass</a>.
+                    Outside of work, I enjoy playing and watching sports (particularly
+                    football, basketball, and baseball), and I like running outside in
+                    my town late at night for exercise. When I'm inside, I'll usually be
+                    on the computer reading about and experimenting with any number of
+                    technical topics, although usually dealing in some way with open-source
+                    or linux. I also have dual American/German citizenship (as my work
+                    experience in Germany may have hinted at), and regularly stay in touch
+                    with and try to visit my grandparents and uncle in Hamburg, Germany, whenever
+                    I can.
                 </p>
 
                 <p>
-                Outside of the tech world, I like watching sports (particularly
-                football, basketball, and soccer), exercising by running around my city or (more recently)
-                bouldering, and growing my still-very-small garden. I also like
-                staying in touch with my grandparents and uncle who all live in
-                Hamburg, visiting them whenever I can find the time!
+                    After having lived in some very different places throughout my life (Miami,
+                    New York City, Pittsburgh, Ansbach), I would say that I am always open to
+                    a new experience, being able to adapt to a situation while also
+                    leaving my mark!
                 </p>
 
                 <footer>
