--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
                 <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
-                        <li><a href="projects.html">Skills & Projects</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="resume.html">Resume</a></li>
                 </ul>
                 </nav>
@@ -28,12 +29,12 @@
 
                 <td>
                 Welcome to my website! I am a software engineer with
-                interests in application and web development. Use the
-                links above to learn more about me, check out some projects that
+                interests in backend web development and databases. Use the
+                links above to learn more about me, check out some of the projects that
                 I've worked on, or view my resume.
 
                 <p>
-                Please contact me via email at <b>rmm783@gmail.com</b>, or just
+                To contact me, please email me at <b>rmm783@gmail.com</b>, or just
                 click the 'email' link below.
                 </p>
                 </td>
