--- a/projects.html
+++ b/projects.html
@@ -12,51 +12,52 @@
                 <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
-                        <li><a href="projects.html">Skills & Projects</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="resume.html">Resume</a></li>
                 </ul>
                 </nav>
 
-                <header><h1>Skills & Projects</h1></header>
+                <header><h1>Projects</h1></header>
 
                 <p>
-                These are the technologies that I've used and become familiar
-                with throughout my software engineering career.
-                </p>
-
-                <p>
-                <ul>
-                        <li>Python 3</li>
-                        <li>Web Apps w/ Django</li>
-                        <li>PostgreSQL</li>
-                        <li>Docker</li>
-                        <li>Java</li>
-                        <li>C, C++</li>
-                        <li>OCaml</li>
-                        <li>Bash</li>
-                        <li>Git</li>
-                        <li>Linux Systems & Tools</li>
-                        <li>Atlassian Suite (JIRA, Kanban, Confluence)</li>
-                </ul>
-                </p>
-
-                <b>Currently learning:</b>
-
-                <p>
-                <ul>
-                        <li>Gitlab CI/CD</li>
-                        <li>R w/ Shiny</li>
-                        <li>AWS</li>
-                </ul>
-                </p>
-
-                <hr style="height:5pt; visibility:hidden;">
-                <p>
-                Below are some projects that I am actively working on or have
-                worked on in the past.
+                    Note: I also regularly work on small logic and/or programming challenges with
+                    <a href="https://julianegerez.github.io">Julian E. Gerez</a>, challenges which we usually find on
+                    FiveThirtyEight's <a href="https://fivethirtyeight.com/tag/the-riddler/">"The Riddler"</a>. After
+                    coming up with and implementing a solution together, Julian usually writes a paper describing
+                    that solution and the thought process leading up to it, sometimes also including further
+                    statistical analysis/modeling that may have interested him. Some of these papers can be found
+                    <a href="https://julianegerez.github.io/blog/">here</a>.
                 </p>
 
                 <table cellspacing="10" border="1" rules=none>
+                <tr>
+                        <td>
+                                <h2>Lighting Proposal App</h2>
+                                <h5>Lead Developer</h5>
+                                <h5>July 2020 - Current</h5>
+                        </td>
+
+                        <td>
+                                Lighting Proposal App, or <b>LPA</b>, is a Django
+                                web app which helps its users create, modify, and render
+                                commercial lighting proposals and quotes. In an environment
+                                where multiple people are creating proposals simultaneously,
+                                existing proposals are constantly being changed, new products
+                                are being introduced in a consistent and systematic way, and
+                                time-to-market (rather, potential client) is key, LPA comes
+                                across as a robust and clean solution.
+                        </td>
+                </tr>
+
+                <tr>
+                    <td>
+                    </td>
+                    <td>
+                        ---------------------------------------------------------------------------
+                    </td>
+                </tr>
+
                 <tr>
                         <td>
                                 <h2>WCQ</h2>
@@ -80,6 +81,14 @@
                 </tr>
 
                 <tr>
+                    <td>
+                    </td>
+                    <td>
+                        ---------------------------------------------------------------------------
+                    </td>
+                </tr>
+
+                <tr>
                         <td>
                                 <h2>ImHere</h2>
                                 <h5>Lead Developer, Database Manager</h5>
@@ -99,7 +108,13 @@
                         </td>
                 </tr>
 
-                <!-- for spacing between rows -->
+                <tr>
+                    <td>
+                    </td>
+                    <td>
+                        ---------------------------------------------------------------------------
+                    </td>
+                </tr>
 
                 <tr>
                         <td>
@@ -121,7 +136,13 @@
                         </td>
                 </tr>
 
-                <!-- for spacing between rows -->
+                <tr>
+                    <td>
+                    </td>
+                    <td>
+                        ---------------------------------------------------------------------------
+                    </td>
+                </tr>
 
                 <tr>
                         <td>
