--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,8 @@
                 <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
-                        <li><a href="projects.html">Skills & Projects</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="resume.html">Resume</a></li>
                 </ul>
                 </nav>
