Fix grammar in about page

--- a/about.html
+++ b/about.html
@@ -37,11 +37,10 @@
                     football, basketball, and baseball), and I like running outside in
                     my town late at night for exercise. When I'm inside, I'll usually be
                     on the computer reading about and experimenting with any number of
-                    technical topics, although usually dealing in some way with open-source
-                    or linux. I also have dual American/German citizenship (as my work
+                    technical topics that usually involve open-source or linux in some way.
+                    I also have dual American/German citizenship (as my work
                     experience in Germany may have hinted at), and regularly stay in touch
-                    with and try to visit my grandparents and uncle in Hamburg, Germany, whenever
-                    I can.
+                    with and try to visit my grandparents and uncle in Hamburg, Germany.
                 </p>
 
                 <p>
