Update page Feb 13, 2025

--- a/about.html
+++ b/about.html
@@ -21,33 +21,32 @@
                 <header><h1>About Me</h1></header>
 
                 <p>
-                    My name is <b>Ricardo Moritz Martinez</b> and I am a 25-year old
+                    My name is <b>Ricardo Moritz Martinez</b> and I am a
                     software engineer from Miami, FL. In May 2017, I
                     graduated from Columbia University's Fu Foundation School of
                     Engineering and Applied Science with a B.S. in Computer Science.
                     The following year, I started working as a software engineer for
-                    Tradebyte Software GmbH in Ansbach, Germany. Over the next two years
-                    I would go on to learn a great deal, both professionally and personally,
-                    but at the end of June, 2020, in the midst of the COVID-19 pandemic,
-                    I returned to my family in the U.S.
+                    Tradebyte Software GmbH in Ansbach, Germany. At the end of June,
+		    2020, in the midst of the COVID-19 pandemic, I returned home to my
+		    family in the U.S. In January 2021, I began working remotely for
+		    Mediaocean, Inc. 
                 </p>
 
                 <p>
                     Outside of work, I enjoy playing and watching sports (particularly
-                    football, basketball, and baseball), and I like running outside in
-                    my town late at night for exercise. When I'm inside, I'll usually be
-                    on the computer reading about and experimenting with any number of
-                    technical topics that usually involve open-source or linux in some way.
-                    I also have dual American/German citizenship (as my work
-                    experience in Germany may have hinted at), and regularly stay in touch
-                    with and try to visit my grandparents and uncle in Hamburg, Germany.
+                    football, basketball, and soccer), and I like running late at night
+                    for exercise. When I'm inside, I'll usually be on the computer reading
+		    about and experimenting with any number of technical topics that, in some
+		    way, involve open-source or linux. I also have dual American/German
+		    citizenship (as my work experience in Germany may have hinted at), and
+		    regularly stay in touch with and try to visit my grandparents and uncle in
+		    Hamburg, Germany.
                 </p>
 
                 <p>
-                    After having lived in some very different places throughout my life (Miami,
+                    After having lived in a variety of different places throughout my life (Miami,
                     New York City, Pittsburgh, Ansbach), I would say that I am always open to
-                    a new experience, being able to adapt to a situation while also
-                    leaving my mark!
+                    new experiencing new things and places, always trying to leave my mark!
                 </p>
 
                 <footer>
